@@ -1,6 +1,7 @@
 Revision history for Perl extension Dist::Zilla::PluginBundle::Author::GTERMARS
 
 {{$NEXT}}
+    - Fix handling of "script/" dirs for StaticInstall
 
 0.03      2021-01-10 15:29:03-08:00 America/Vancouver
     - Post-release, push branches+tags upstream to Git
